--- a/src/App.css
+++ b/src/App.css
@@ -36,14 +36,37 @@
   font-weight: 500;
 }
 
-.App main section input,.App main section button {
+.App main section input, .App main section textarea {
+  font-style: italic;
   font-family : inherit;
   font-size   : 100%;
 }
 
 .App main section button {
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+  font-family : inherit;
+  font-size   : 100%;
   padding: 20px;
   font-weight: 600;
+  background-color: black;
+  color: white;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  border-radius: 6px;
+}
+
+.App main section button:hover {
+  background-color: darkgrey;
+  border-color: darkgrey;
+}
+
+.App main section button:active {
+  background-color: white;
+  color: black;
+  border-color: black;
 }
 
 section h2 {
@@ -52,14 +75,11 @@ section h2 {
   padding-bottom: 0.6em;
   border-bottom-style: solid;
   border-bottom-width: 1px;
-  border-bottom-color: black;
+  border-bottom-color: darkgrey;
 }
 
 time {
-  display: block;
-  margin-bottom: 1em;
-  margin-top: 0;
-  font-size: 1.2em;
+  font-size: 1.4em;
 }
 
 .ceremony a, .reception a {
@@ -73,25 +93,24 @@ time {
 }
 
 .App main section input {
-  width: 500px;
+  width: 100%;
   padding: 20px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: darkgrey;
+  box-sizing: border-box;
+  border-radius: 6px;
 }
 
 .App main section textarea {
   font-family : inherit;
   font-size   : 100%;
-  width: 500px;
-  height: 100px;
+  width: 100%;
+  height: 200px;
   padding: 20px;
-}
-
-@media only screen and (min-device-width: 375px)
-   { 
-    .App main section textarea {
-      width: calc(100% - 20px);
-    }
-
-    .App main section input {
-      width: calc(100% - 20px);
-    }
+  border-width: 1px;
+  border-style: solid;
+  border-color: darkgrey;
+  box-sizing: border-box;
+  border-radius: 6px;
 }
