--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
 .App header h1.title {
   font-size: 3em;
   font-weight: 500;
+  font-style: italic;
 }
 
 .App main section input, .App main section textarea {
