--- a/src/App.css
+++ b/src/App.css
@@ -53,8 +53,10 @@
     width: 100%;
     display: grid;
     grid-template-columns: calc(calc(100% - 900px) / 2) 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr calc(calc(100% - 900px) / 2);
-    grid-template-areas: "header header header header header header header header header header header header header header" ". content content content content content content content content content content content content .";
-    grid-template-rows: auto auto;
+    grid-template-areas: "header header header header header header header header header header header header header header"
+    ". content content content content content content content content content content content content ."
+    ". footer footer footer footer footer footer footer footer footer footer footer footer .";
+    grid-template-rows: auto auto auto;
     font-variant-numeric: oldstyle-nums;
 }
 
@@ -69,14 +71,25 @@
     padding-bottom: 3em;
 }
 
+.App footer {
+    grid-area: footer;
+}
+
 .App main {
     grid-area: content;
 }
 
 .App header h1.title {
+    margin-top: 150px;
     font-size: 3em;
     font-weight: bold;
     font-style: italic;
+}
+
+.App .fleuron {
+    margin-top: 100px;
+    font-size: 3em;
+    margin-bottom: 50px;
 }
 
 .App main section input,
