--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@
     font-style: italic;
 }
 
-@media only screen and (min-device-width: 900px) {
+@media only screen and (max-width: 500px) {
     .App header h1.title{
         font-size: 3em;
     }
