--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,94 @@
     border-color: black;
 }
 
+:root {
+    --slider-width: 180px;
+    --slider-height: 66px;
+    --slider-border-width: 2px;
+    --text-padding: 14px;
+}
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: calc(var(--slider-width) * 2);
+    /* width: 100%; */
+    height: calc(var(--slider-height) + calc(var(--slider-border-width) * 2));
+}
+  
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-color: darkgrey;
+    border-width: 1px;
+    border-style: solid;
+    -webkit-transition: .4s;
+    transition: .4s;
+    content: "";
+}
+
+.slider:before {
+    position: absolute;
+    content: "Unable to Attend";
+    height: calc(var(--slider-height) - calc(var(--slider-border-width) * 2) - var(--text-padding));
+    width: calc(var(--slider-width) - calc(var(--slider-border-width) * 2));
+    left: calc(var(--slider-border-width) * 2);
+    bottom: calc(var(--slider-border-width) * 2);
+    background-color: darkgrey;
+    color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+    padding-top: var(--text-padding);
+}
+
+input:checked + .slider {
+    /* background-color: green; */
+    
+}
+
+input:focus + .slider {
+/* box-shadow: 0 0 1px green; */
+}
+
+input:checked + .slider:before {
+    content: "Attending";
+    background-color: black;
+    --translation: calc(var(--slider-width) - calc(var(--slider-border-width) * 2));
+    -webkit-transform: translateX(var(--translation));
+    -ms-transform: translateX(var(--translation));
+    transform: translateX(var(--translation));
+}
+
+.slider {
+    border-radius: 6px;
+}
+
+.slider:before {
+    border-radius: 4px;
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
 section h2 {
     margin-top: 3em;
     font-weight: 500;
